--- a/index.html
+++ b/index.html
@@ -29,70 +29,70 @@
 </div>
     <section id="slideshow">
         <figure class="item active">
-            <img src="image1.jpg" alt="Image 1" data-image="image1" >
+            <img src="images/image1.jpg" alt="Image 1" data-image="image1" >
             <div class="content">
                 <p>Slider 01</p>
                 <h2>Zitouna</h2>
             </div>
         </figure>
         <figure class="item">
-            <img src="image8.jpg" alt="Image 2" data-image="image2" >
+            <img src="images/image8.jpg" alt="Image 2" data-image="image2" >
             <div class="content">
                 <p>Slider 02</p>
                 <h2>Médina</h2>
             </div>
         </figure>
         <figure class="item">
-            <img src="image3.jpg" alt="Image 3" data-image="image3">
+            <img src="images/image3.jpg" alt="Image 3" data-image="image3">
             <div class="content">
                 <p>Slider 03</p>
                 <h2>Beb bhar</h2>
             </div>
         </figure>
         <figure class="item">
-            <img src="image4.jpg" alt="Image 4" data-image="image4">
+            <img src="images/image4.jpg" alt="Image 4" data-image="image4">
             <div class="content">
                 <p>Slider 04</p>
                 <h2>La Marsa</h2>
             </div>
         </figure>
         <figure class="item">
-            <img src="image5.jpg" alt="Image 5" data-image="image5">
+            <img src="images/image5.jpg" alt="Image 5" data-image="image5">
             <div class="content">
                 <p>Slider 05</p>
                 <h2>Hammamet</h2>
             </div>
         </figure>
         <figure class="item">
-            <img src="image11.jpg" alt="Image 6" data-image="image6">
+            <img src="images/image11.jpg" alt="Image 6" data-image="image6">
             <div class="content">
                 <p>Slider 06</p>
                 <h2>Djerba</h2>
             </div>
         </figure>
         <figure class="item">
-            <img src="image7.jpg" alt="Image 7" data-image="image7">
+            <img src="images/image7.jpg" alt="Image 7" data-image="image7">
             <div class="content">
                 <p>Slider 07</p>
                 <h2>Carthage</h2>
             </div>
         </figure>
         <figure class="item">
-            <img src="image12.jpg" alt="Image 8" data-image="image8">
+            <img src="images/image12.jpg" alt="Image 8" data-image="image8">
             <div class="content">
                 <p>Slider 08</p>
                 <h2>El Jem</h2>
             </div>
         </figure>
         <figure class="item">
-            <img src="image9.jpg" alt="Image 9" data-image="image9">
+            <img src="images/image9.jpg" alt="Image 9" data-image="image9">
             <div class="content">
                 <p>Slider 09</p>
                 <h2>Kairouan</h2>
             </div>
         </figure>
         <figure class="item">
-            <img src="image10.jpg" alt="Image 10" data-image="image10">
+            <img src="images/image10.jpg" alt="Image 10" data-image="image10">
             <div class="content">
                 <p>Slider 10</p>
                 <h2>Douz</h2>
@@ -101,61 +101,61 @@
     </section>
     <section id="thumbnails">
         <div class="thumbnail " data-image="image1">
-            <img src="image1.jpg" alt="Image 1">
+            <img src="images/image1.jpg" alt="Image 1">
             <div class="content">
                 Zitouna
             </div>
         </div>
         <div class="thumbnail" data-image="image2">
-            <img src="image8.jpg" alt="Image 2">
+            <img src="images/image8.jpg" alt="Image 2">
             <div class="content">
                Médina
             </div>
         </div>
         <div class="thumbnail" data-image="image3">
-            <img src="image3.jpg" alt="Image 3">
+            <img src="images/image3.jpg" alt="Image 3">
             <div class="content">
                 Beb Bhar
             </div>
         </div>
         <div class="thumbnail" data-image="image4">
-            <img src="image4.jpg" alt="Image 4">
+            <img src="images/image4.jpg" alt="Image 4">
             <div class="content">
                 La Marsa
             </div>
         </div>
         <div class="thumbnail" data-image="image5">
-            <img src="image5.jpg" alt="Image 5">
+            <img src="images/image5.jpg" alt="Image 5">
             <div class="content">
                 Hammamet
             </div>
         </div>
         <div class="thumbnail" data-image="image6">
-            <img src="image11.jpg" alt="Image 6">
+            <img src="images/image11.jpg" alt="Image 6">
             <div class="content">
                 Djerba
             </div>
         </div>
         <div class="thumbnail" data-image="image7">
-            <img src="image7.jpg" alt="Image 7">
+            <img src="images/image7.jpg" alt="Image 7">
             <div class="content">
                 Carthage
             </div>
         </div>
         <div class="thumbnail" data-image="image8">
-            <img src="image12.jpg" alt="Image 8">
+            <img src="images/image12.jpg" alt="Image 8">
             <div class="content">
                 El Jem
             </div>
         </div>
         <div class="thumbnail" data-image="image9">
-            <img src="image9.jpg" alt="Image 9">
+            <img src="images/image9.jpg" alt="Image 9">
             <div class="content">
                 Kairouan
             </div>
         </div>
         <div class="thumbnail" data-image="image10">
-            <img src="image10.jpg" alt="Image 10">
+            <img src="images/image10.jpg" alt="Image 10">
             <div class="content">
                 Douz
             </div>
