--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </svg>
         </div>
     </header>
-    <a href="#" id="toggle-toolbar"><i class="fa-solid fa-arrow-right"></i>&nbsp;Barre d'outils</a>
+    <a href="#" id="toggle-toolbar"><i class="fa-solid fa-arrow-right"></i>Barre d'outils</a>
 
     <div class="buttons">
     <button id="previous-page"><</button>
